2004-06-19  Daniel Elstner  <daniel.elstner@gmx.net>

	* Makefile.am (dist_noinst_DATA): Add po/LINGUAS.

2004-06-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc (apply_label_markup): Make use of the <small>
	convenience tag to simplify the markup slightly.

2004-06-16  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/aboutdialog.cc: Include <libglademm/xml.h> instead of the
	whole <libglademm.h> to save a tiny bit of compile time.
	* src/controller.cc: ditto.

	* src/filebuffer.cc: Same here, and also replace <gconfmm.h> by
	<gconfmm/client.h>.
	* src/filetree.cc: ditto
	* src/mainwindow.cc: ditto
	* src/prefdialog.cc: ditto.

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/translation.cc (initialize_gettext): Only call
	bind_textdomain_codeset() if it is available.  I do hope there
	aren't any gettext implementations around that perform encoding
	conversion but don't have bind_textdomain_codeset()...

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedPtr): Add dummy template specializations
	for SharedObject and const SharedObject.  This makes it impossible
	to instantiate a generic SharedPtr<SharedObject>, which would be
	fatal because SharedObject doesn't have a virtual destructor.

2004-06-14  Daniel Elstner  <daniel.elstner@gmx.net>

	* src/sharedptr.h (SharedObject::refcount_): Change type to long,
	so that a full word will be used on 64 bit machines.
	(SharedPtr): Add a paragraph about operator const void*() to the
	class description.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* autogen.sh: Append an XGETTEXT_KEYWORDS = ... line to the
	generated po/Makefile.in.in file.  These flags are picked up
	by intltool-update and passed to xgettext.  Use this feature
	to make xgettext recognize Util::compose() format strings.

2004-06-09  Daniel Elstner  <daniel.elstner@gmx.net>

	* configure.ac (GETTEXT_PACKAGE): Use a plain shell assignment