@@ -31,12 +31,12 @@ CLEANFILES    = stockimages.h
 gdk_pixbuf_csource_command = $(GDK_PIXBUF_CSOURCE) --extern --raw
 
 stockimages.h: $(stockimages)
-	@build_list=''; \
-	list='$(stockimages)'; for file in $$list ; do \
-	  name=`echo "$$file" | sed 's|\..*$$||'`; \
-	  dir=''; test -f "$$file" || dir='$(srcdir)/'; \
+	@build_list='--build-list'; \
+	list='$(stockimages)'; for file in $$list; do \
+	  name=`echo "$$file" | sed 's|^.*/||;s|\..*$$||;s|-|_|g'`; \
+	  dir=; test -f "$$file" || dir='$(srcdir)/'; \
 	  build_list="$$build_list $$name $$dir$$file"; \
 	done; \
-	echo " $(gdk_pixbuf_csource_command) --build-list $$build_list > $@"; \
-	$(gdk_pixbuf_csource_command) --build-list $$build_list > $@
+	echo " $(gdk_pixbuf_csource_command) $$build_list >$@"; \
+	$(gdk_pixbuf_csource_command) $$build_list >$@
 
